--- a/package.json
+++ b/package.json
@@ -15,18 +15,21 @@
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
+    "build.server": "vite build -c adapters/cloud-run/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
-    "deploy": "echo 'Run \"npm run qwik add\" to install a server adapter'",
+    "deploy": "gcloud run deploy my-cloud-run-app --source .",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
-    "preview": "qwik build preview && vite preview --open",
+     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
+    "start.server": "PROTOCOL_HEADER=X-Forwarded-Proto HOST_HEADER=X-Forwarded-Host AUTH_SECRET=Ec3rKotvV3afUXl230TxkQ66yFpVCnoJ/H4t7lQsvt0= ORIGIN=http://localhost:8080 node server/entry.cloud-run.js",
     "qwik": "qwik"
   },
   "devDependencies": {
+    "@auth/qwik": "0.2.2",
     "@builder.io/qwik": "^1.9.1",
     "@builder.io/qwik-city": "^1.9.1",
     "@types/eslint": "8.56.10",
